--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="container">
     <div class="imge-av">
-      <img src="../../assets/avataaars.svg" alt="" srcset="" class="w-25" />
+      <img src="assets/avataaars.svg" alt="" srcset="" class="w-25" />
     </div>
     <h2 class="py-2">START FRAMEWORK</h2>
 
